Closed Bug 601835 Opened 14 years ago Closed 14 years ago

jaeger/testBug550743.js failed on Solaris with Solaris Studio

Categories

(Core :: JavaScript Engine, defect)

x86
Solaris
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

(Keywords: regression, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

TEST-UNEXPECTED-FAIL | trace-test.py | /export/home/ginn/work/mozilla-central/js/src/trace-test/tests/jaeger/testBug550743.js: /export/home/ginn/work/mozilla-central/js/src/trace-test/tests/jaeger/testBug550743.js:21: Error: Assertion failed: got "2.103361453e-314", expected "hi"

It starts to fail after this commit

# HG changeset patch
# User Bill McCloskey <wmccloskey@mozilla.com>
# Date 1285791696 25200
# Node ID 42728286536210f9b6e3a6b09f18adfe11bb5666
# Parent  98c134cf59ef7a02abe9a2957bfa2ac6637f7a54
Bug 535912 - Eliminate blockChain from JSStackFrame (r=cdleary)
It works fine if compiled with gcc-4.3 on Solaris.
Leon Sha found the root cause of this bug is sizeof JSStackFrame struct is not multiple of 8.
Since we disabled JS_STATIC_ASSERT for Solaris Studio, we didn't find the problem earlier.

We should add JS_STATIC_ASSERT in a Solaris Studio compatible way, so that it won't happen again.

Back to JSStackFrame struct,
Luke, why would we need "void* padding" in the first place?
I'm looking at the patch of Bug 539144, it seems sizeof JSStackFrame is multiple of 8 without padding at that time.
Can we remove it?

Thanks!
In this way, it works for both global scope and inside functions.
Assignee: general → ginn.chen
Status: NEW → ASSIGNED
Attachment #482022 - Flags: review?(brendan)
Comment on attachment 482022 [details] [diff] [review]
add JS_STATIC_ASSERT macro for Solaris Studio

The comment should be inside the ifdef (under the #ifdef __SUNPRO_CC line) and it needs to be updated to say what the + line in the patch is doing, and why it must differ from the #else-clause code. r=me with that.

/be
Attachment #482022 - Flags: review?(brendan) → review+
(In reply to comment #2)
Coincidentally, I removed the unnecessary padding yesterday:
http://hg.mozilla.org/tracemonkey/rev/edb0506b0c23
Add JS_STATIC_ASSERT back for Solaris Studio
http://hg.mozilla.org/tracemonkey/rev/0a667876b6fd
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/0a667876b6fd
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: