Bug 601835 Add JS_STATIC_ASSERT back for Solaris Studio, r=brendan